feat(app-shell): add splash

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,13 @@
+//
+// Normalize.css
+//
+
+@import '~normalize.css/normalize';
+
+//
+// Angular Material Design
+//
+
 @import '~@angular/material/core/theming/all-theme';
 
 // Include the base styles for Angular Material core.
