--- a/src/app/shared/bottom-nav/bottom-nav.component.html
+++ b/src/app/shared/bottom-nav/bottom-nav.component.html
@@ -1,5 +1,5 @@
 <md-toolbar color="accent">
-  <button md-icon-button>
+  <button md-icon-button (click)="openMenuClick($event)">
     <md-icon>menu</md-icon>
   </button>
   <button md-icon-button>
