feat: scaffold nav list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <md-sidenav-container>
   <md-sidenav #start>
+    <pa-nav-list [navItems]="navItems"></pa-nav-list>
   </md-sidenav>
   <div class="main"></div>
 </md-sidenav-container>
