style: change accent palette to purple

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,7 +47,7 @@ $para-blue: (
 );
 
 $para-app-primary: md-palette($para-blue);
-$para-app-accent: md-palette($md-blue-grey);
+$para-app-accent: md-palette($md-purple);
 
 $para-app-theme: md-light-theme($para-app-primary, $para-app-accent);
 
