--- a/src/app/shared/nav-list/nav-list.component.html
+++ b/src/app/shared/nav-list/nav-list.component.html
@@ -1,6 +1,6 @@
 <md-nav-list>
   <md-list-item *ngFor="let item of navItems">
-    <md-icon color="accent">{{item.icon}}</md-icon>
+    <md-icon color="primary">{{item.icon}}</md-icon>
     <a href="#">{{item.label}}</a>
   </md-list-item>
 </md-nav-list>
