--- a/src/app/shared/bottom-nav/bottom-nav.component.html
+++ b/src/app/shared/bottom-nav/bottom-nav.component.html
@@ -2,7 +2,7 @@
   <button md-icon-button (click)="openMenuClick($event)">
     <md-icon>menu</md-icon>
   </button>
-  <button md-icon-button>
+  <button md-icon-button (click)="searchClick($event)">
     <md-icon>search</md-icon>
   </button>
 </md-toolbar>
