feat: scaffold search panel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,5 @@
   </div>
 </md-sidenav-container>
 <div class="nav">
-  <pa-bottom-nav (openMenu)="toggleSideNav(start)" (search)="navigateToSearch()"></pa-bottom-nav>
+  <pa-bottom-nav (openMenu)="toggleSideNav()" (search)="navigateToSearch()"></pa-bottom-nav>
 </div>
