--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,5 @@
-<p>
-  search works!
-</p>
+<pa-panel heading="Search" (close)="onPanelClose()">
+  <md-input-container floatingPlaceholder="false">
+    <input md-input #input placeholder="Find an article">
+  </md-input-container>
+</pa-panel>
