feat: add panel to article list

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,4 +1,4 @@
-<pa-panel heading="Search" (close)="onPanelClose()">
+<pa-panel heading="Search" mode="close" (close)="onPanelClose()">
   <md-input-container floatingPlaceholder="false">
     <input md-input #input placeholder="Find an article">
   </md-input-container>
