style: change bottom nav toolbar color to primary

--- a/src/app/shared/bottom-nav/bottom-nav.component.html
+++ b/src/app/shared/bottom-nav/bottom-nav.component.html
@@ -1,4 +1,4 @@
-<md-toolbar color="accent">
+<md-toolbar color="primary">
   <button md-icon-button (click)="openMenuClick($event)">
     <md-icon>menu</md-icon>
   </button>
