--- a/src/app/articles/article-list/article-list.component.scss
+++ b/src/app/articles/article-list/article-list.component.scss
@@ -6,9 +6,6 @@ md-card-header {
   height: auto;
 }
 
-// .md-card-title {
-//   text-transform: capitalize;
-//   overflow: hidden;
-//   white-space: nowrap;
-//   text-overflow: ellipsis;
-// }
+md-card-title {
+  text-transform: capitalize;
+}
