feat(article-detail): add panel and article heading

--- a/src/app/articles/article-detail/article-detail.component.html
+++ b/src/app/articles/article-detail/article-detail.component.html
@@ -1,3 +1,3 @@
-<p>
-  article-detail works!
-</p>
+<pa-panel mode="back" [heading]="(article | async).topic" (back)="onPanelBack()">
+  <pa-article-heading *ngIf="article" [article]="article | async"></pa-article-heading>
+</pa-panel>
