feat(bottom-nav): add refresh button (non-functional)

--- a/src/app/shared/bottom-nav/bottom-nav.component.html
+++ b/src/app/shared/bottom-nav/bottom-nav.component.html
@@ -5,4 +5,7 @@
   <button md-icon-button (click)="searchClick($event)">
     <md-icon>search</md-icon>
   </button>
+  <button md-icon-button>
+    <md-icon>refresh</md-icon>
+  </button>
 </md-toolbar>
