--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,6 @@
-<p>
-  home works!
-</p>
+<md-toolbar>
+  <span class="logo"></span>
+</md-toolbar>
+<div class="content">
+  <pa-article-list [articles]="this.homeArticles | async"></pa-article-list>
+</div>
