--- a/src/app/shared/bottom-nav/bottom-nav.component.html
+++ b/src/app/shared/bottom-nav/bottom-nav.component.html
@@ -8,4 +8,13 @@
   <button md-icon-button>
     <md-icon>refresh</md-icon>
   </button>
+  <span class="spacer"></span>
+  <button md-icon-button [mdMenuTriggerFor]="menu">
+    <md-icon>more_vert</md-icon>
+  </button>
+  <md-menu #menu="mdMenu">
+    <button md-menu-item> Settings </button>
+    <button md-menu-item> Subscribe </button>
+    <button md-menu-item> Help </button>
+  </md-menu>
 </md-toolbar>
