style: make asset urls relative

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,7 +2,7 @@
   display: block;
   height: 14px;
   width: 200px;
-  background: url(/assets/parachute-logo.png) no-repeat;
+  background: url(assets/parachute-logo.png) no-repeat;
   background-size: contain;
 }
 
