feat(article-detail-panel): add placeholder article text

--- a/src/app/articles/article-detail/article-detail-panel.component.html
+++ b/src/app/articles/article-detail/article-detail-panel.component.html
@@ -1,3 +1,33 @@
 <pa-panel mode="back" [heading]="(article | async).topic" (back)="onPanelBack()">
   <pa-article-heading *ngIf="article" [article]="article | async"></pa-article-heading>
+  <div class="content">
+    <p>
+      The keyed viewpoint studies our biologist. A device dashes. This farm hopes below the lawn.
+      The rights decade studies above a succeeding backlog.
+    </p>
+    <p>
+      A prison leaps upon the silly rail. The conditioned lens resides. An integral daughter returns below a hell.
+      The jack shies away! The limb tools a formula underneath the outgoing male.
+      An agenda evidences a nice patent into the metric. The concert weds.
+    </p>
+    <p>
+      The indent rules outside the light damage. Can a genetic shame thirst? When can the detective lather a contour?
+      The monster breezes on top of the soil. A palace pops the easy weapon against a bulletin.
+      A rat emerges below the allowable trouser. This defeat reads the express office after the chemistry.
+    </p>
+    <p>
+      The contemporary concept rests upon the written servant. A parade advertises beside the blocked jerk.
+      The composite abides a prize. Does the irony shelter the prime judge? The responsible fabric pounds down
+      upon each explosive component.
+      How will the jelly maximize the faith? Why does the tag isolate the emulator?
+    </p>
+    <p>
+      Where the metro staggers! Underneath the existence dines the bass. How will the approved secret see each
+      commentary? The glory laughs beside a resident. Below the state whim starves the fell toe.
+    </p>
+    <p>
+      When crowded result stretches. My village advances. A feeble affect breathes inside the whistle.
+      How does a physiology spoil the fascist reflex?
+    </p>
+  </div>
 </pa-panel>
