feat(article-list): fade in images

--- a/src/app/articles/article-list/article-list.component.html
+++ b/src/app/articles/article-list/article-list.component.html
@@ -7,7 +7,7 @@
       <md-card-subtitle>By {{article.author}}</md-card-subtitle>
     </md-card-title-group>
   </md-card-header>
-  <img md-card-image [src]="article.thumbnail_url">
+  <img md-card-image pa-fade-image [src]="article.thumbnail_url">
   <md-card-content>
     <p>{{article.short_description}}</p>
   </md-card-content>
