feat(sl-episode-list): fade in images

--- a/src/app/sounds-local/sl-episode-list/sl-episode-list-item.component.html
+++ b/src/app/sounds-local/sl-episode-list/sl-episode-list-item.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <img src="assets/sounds-local-episodes/{{episode.slug}}.jpeg">
+  <img pa-fade-image src="assets/sounds-local-episodes/{{episode.slug}}.jpeg">
 </div>
 <div class="content">
   <h1>{{episode.title}}</h1>
