--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,17 @@
 :host {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  width: 100%;
   height: 100%;
-  overflow: scroll;
 }
 
-md-sidenav-container {
-  flex: 1;
-  overflow: scroll;
-}
+.content {
+  height: calc(100% - 64px);
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 
-md-sidenav {
-  width: 18em;
+  @media (max-width: 600px) and (orientation: portrait) {
+    height: calc(100% - 56px);
+  }
+
+  @media (max-width: 960px) and (orientation: landscape) {
+    height: calc(100% - 48px);
+  }
 }
